--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -27,11 +27,23 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
-
+    
+    - name: Upload artifact
+    uses: PeerXu/upload-asset@v1
+    with:
+      file: build/libs/backend-0.0.1-SNAPSHOT.war
+      os: linux
+      arch: amd64
+      with_tag: true
+      with_sha1: true
+      suffix: .war
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
-    - name: Publish to GitHub Packages
-      run: gradle publish
-      env:
-        USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Publish to GitHub Packages
+    #   run: gradle publish
+    #   env:
+    #     USERNAME: ${{ github.actor }}
+    #     TOKEN: ${{ secrets.GITHUB_TOKEN }}
