--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,6 @@ dineduc:
     modules-path-url: "/modules"
     lessons-path-url: "/lessons"
     trails-path-url: "/trails"
+  aws:
+    accessKey: "123456"
+    secretKey: "asdfgh"
