--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/strapi
+    url: jdbc:mysql://localhost:3306/strapi?useSSL=false
     username: strapi
     password: strapi
 jwt:
