--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,5 @@ dineduc:
     lessons-path-url: "/lessons"
     trails-path-url: "/trails"
   aws:
-    accessKey: "123456"
-    secretKey: "asdfgh"
+    accessKey: "AKIA42J44LFUH3LFV24W"
+    secretKey: "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"
